--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -28,6 +28,32 @@
     "totalBoilers": "Jami qozonlar",
     "newApplications": "Yangi arizalar"
   },
+   "requests": {
+    "title": "Arizalar",
+    "description": "Qozon sotib olish bo'yicha barcha arizalar ro'yxati.",
+    "boilerName": "Qozon nomi",
+    "customerName": "Mijoz ismi",
+    "phone": "Telefon",
+    "price": "Taklif qilingan narx",
+    "status": "Holat"
+  },
+  "createBoiler": {
+    "title": "Yangi qozon yaratish",
+    "description": "Katalogga yangi qozon qo'shish uchun barcha maydonlarni to'ldiring.",
+    "name_ru": "Nomi (RU)",
+    "name_ru_placeholder": "Masalan, Котел 'Пламя-5'",
+    "name_uz": "Nomi (UZ)",
+    "name_uz_placeholder": "Masalan, 'Plamya-5' qozoni",
+    "description_ru": "Tavsif (RU)",
+    "description_ru_placeholder": "Qozonning xususiyatlarini tasvirlab bering...",
+    "description_uz": "Tavsif (UZ)",
+    "description_uz_placeholder": "Qozonning xususiyatlarini tasvirlab bering...",
+    "price": "Narxi (UZS)",
+    "image": "Rasm",
+    "submitButton": "Qozon yaratish",
+    "successTitle": "Muvaffaqiyatli!",
+    "successDescription": "Yangi qozon muvaffaqiyatli yaratildi."
+  },
   "login": {
     "title": "Administrator uchun kirish",
     "description": "Boshqaruv paneliga kirish uchun ma'lumotlaringizni kiriting.",
